# TradingAgent

./: .env.example  .gitignore  AAPL_backtest_results.json  AGENTS.md  ANET_backtest_results.json  COP_backtest_results.json  FUNDAMENTAL_AGENT_SPEC.md  MODULE_MAP.md  PEP_backtest_results.json  README.md  backtest-dashboard  backtest_dashboard.html  baseline_predictions.json  generate_agent_reports.py  generate_dashboard.py  momentum_orchestrator_backtest.json  openclaw  orchestrator_sector_backtest.json  paths.py  pyproject.toml  rca_results.json  rebuild_from_cache.py  reevaluate_thresholds.py  requirements-backtest.txt  run_backtest.sh  run_parallel_sector_backtest.py  score_analysis.py  sector_backtest_results.json  vercel.json  workstream_a_corrected_backtest.py
.loop/: roadmap.yaml
.vercel/: project.json
Trading-Journals/: DailyCommands.md  DailyCommands.txt  DailyTradingJournal.md  DailyTradingJournal.txt  README.md
agent_learning/: backtesting-complete-guide.md  memory-context.md  steering.md  trading-analysis-mistakes.md
agents/: __init__.py  _registry.py
archive/: README.md
backtest-dashboard/: package-lock.json  package.json
backtests/: __init__.py  common.py  run_fundamental.py  run_oneil.py  run_orchestrator.py  run_technical.py
cli/: __init__.py  __main__.py
core/: __init__.py  config_schema.py  paths.py
docs/: BACKTEST_OUTPUT_FORMAT.md  BACKTEST_PLAYBOOK.md  BACKTEST_REGISTRY.md  CHANGELOG.md  MODULE_MAP.md  MULTI_AGENT_CONTRACT.md  MYTRADINGSPACE_ONE_PAGER.md  PHOENIX_AGENT_IMPLEMENTATION.md  PURE_PREDICTION_MODE.md  README.md  REFACTOR_GUARDRAILS.md  SCRIPTS.md  STRUCTURE.md  TECHNICAL_BACKTEST_PLAN.md  confusion-matrix-backtest-plan.md
fundamental_agent/: __init__.py  dashboard.py  reporting.py  rules.py  service.py  yf_client.py
oneil_agent/: __init__.py  backtest.py  data_client.py  graph.py  rules.py
orchestrator_agent/: __init__.py  backtest.py  config.py  exceptions.py  graph.py  models.py
orchestrator_sector_results/: AAPL_orchestrator_backtest.json  ABBV_orchestrator_backtest.json  AXP_orchestrator_backtest.json  BMY_orchestrator_backtest.json  COST_orchestrator_backtest.json  CVS_orchestrator_backtest.json  CVX_orchestrator_backtest.json  GIS_orchestrator_backtest.json  GOOGL_orchestrator_backtest.json  JPM_orchestrator_backtest.json  LLY_orchestrator_backtest.json  MCD_orchestrator_backtest.json  MO_orchestrator_backtest.json  MRK_orchestrator_backtest.json  NVDA_orchestrator_backtest.json  ORCL_orchestrator_backtest.json  PSX_orchestrator_backtest.json  SLB_orchestrator_backtest.json  TSLA_orchestrator_backtest.json  UNH_orchestrator_backtest.json  VLO_orchestrator_backtest.json  (+3 more)
pipelines/: __init__.py  (+6 more)
(+1878 files in other folders)
