[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-analysis-platform"
version = "0.2.0"
description = "Multi-agent trading analysis platform: Fundamental + Technical + O'Neil CAN SLIM + Orchestrator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32.0",
  "langgraph>=0.6.11",
  "pandas>=2.0.0",
  "yfinance>=0.2.0",
  "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
fundamental-agent = "fundamental_agent.cli:main"
technical-agent   = "technical_agent.cli:main"
oneil-agent       = "oneil_agent.cli:main"

[tool.setuptools.packages.find]
include = [
  "fundamental_agent*",
  "technical_agent*",
  "orchestrator_agent*",
  "oneil_agent*",
  "prediction_engine*",
  "backtests*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
