[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-analysis-platform"
version = "0.2.0"
description = "Multi-agent trading analysis platform: Fundamental + Technical + O'Neil CAN SLIM + Orchestrator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32.0",
  "langgraph>=0.6.11",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.0",
  "yfinance>=0.2.0",        # fallback only — Polygon.io is the primary data source
  "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
fundamental-agent = "agents.fundamental.cli:main"
technical-agent   = "agents.technical.cli:main"
oneil-agent       = "agents.oneil.cli:main"

[tool.setuptools.packages.find]
include = [
  "agents*",
  "backtests*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
